```dbml
// Day 1 - Student Management System ERD

Table students {
  student_id integer [primary key]
  first_name varchar(50)
  last_name varchar(50)
  email varchar(100)
  phone_number varchar(30)
  date_of_birth date
  gender varchar(20)
  city varchar(50)
  created_at timestamptz
}

Table instructors {
  instructor_id integer [primary key]
  first_name varchar(50)
  last_name varchar(50)
  email varchar(100)
  expertise varchar(100)
  created_at timestamptz
}

Table courses {
  course_id integer [primary key]
  course_name varchar(100)
  category varchar(50)
  instructor_id integer
  course_fee numeric(10,2)
  start_date date
  end_date date
  created_at timestamptz
}

Table enrollments {
  enrollment_id integer [primary key]
  student_id integer
  course_id integer
  enrollment_date date
  status varchar(20) // 'active', 'completed', 'dropped'
  created_at timestamptz
}

// Relationships
Ref: courses.instructor_id > instructors.instructor_id
Ref: enrollments.course_id > courses.course_id
Ref: enrollments.student_id > students.student_id
```